flex/flex-tests/testData/js2_highlighting/NestedClass.js2
package {
    public class NestedClass {
        class <error descr="Nested classes are not allowed">Bar</error> {}
    }
}

{
    class Foo {}
}